# fastapi_template

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: test.yml
scripts/: lint.sh
tests/: test_main.py
