[tool.poetry]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Doanh Luong <doanh.luong@sap.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
